--- a/Proyecto Reingeniera de Procesos/src/proyecto/reingeniera/de/procesos/MainMenu.form
+++ b/Proyecto Reingeniera de Procesos/src/proyecto/reingeniera/de/procesos/MainMenu.form
@@ -4,6 +4,9 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Main Menu"/>
+    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+      <Color blue="cc" green="0" red="0" type="rgb"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -25,11 +28,10 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="14" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace pref="35" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="DepositarBtn" min="-2" pref="148" max="-2" attributes="0"/>
                           <Component id="CrearCuentaBtn" min="-2" pref="148" max="-2" attributes="0"/>
@@ -44,30 +46,34 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="RetirarBtn" min="-2" pref="148" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="TransferirBtn" max="32767" attributes="0"/>
+                              <Component id="TransferirBtn" min="-2" pref="136" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <Component id="BuscarBtn" min="-2" pref="148" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="HdesactivadasBtn" max="32767" attributes="0"/>
-                          <Component id="ConsultCuentasBtn" pref="148" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="HdesactivadasBtn" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                          <Component id="ConsultCuentasBtn" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                      <Component id="HActivasBtn" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="HActivasBtn" min="-2" pref="136" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace pref="35" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" pref="47" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="CrearCuentaBtn" alignment="3" min="-2" pref="70" max="-2" attributes="0"/>
                   <Component id="CerrarCuentaBtn" alignment="3" min="-2" pref="70" max="-2" attributes="0"/>
@@ -87,7 +93,7 @@
               </Group>
               <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
               <Component id="HdesactivadasBtn" min="-2" pref="70" max="-2" attributes="0"/>
-              <EmptySpace pref="90" max="32767" attributes="0"/>
+              <EmptySpace pref="92" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -99,7 +105,10 @@
           <Color blue="ff" green="ff" red="cc" type="rgb"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="24" style="1"/>
+          <Font name="HP Simplified" size="36" style="1"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="cc" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Sistema Bancario"/>
@@ -108,7 +117,7 @@
     <Component class="javax.swing.JButton" name="CrearCuentaBtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="1"/>
+          <Font name="HP Simplified" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Crear cuenta"/>
       </Properties>
@@ -119,7 +128,7 @@
     <Component class="javax.swing.JButton" name="CerrarCuentaBtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="1"/>
+          <Font name="HP Simplified" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Cerrar Cuenta"/>
       </Properties>
@@ -130,7 +139,7 @@
     <Component class="javax.swing.JButton" name="ModifCuentaBtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="1"/>
+          <Font name="HP Simplified" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Modificar Cuenta"/>
       </Properties>
@@ -141,7 +150,7 @@
     <Component class="javax.swing.JButton" name="DepositarBtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="1"/>
+          <Font name="HP Simplified" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Depositar"/>
       </Properties>
@@ -152,7 +161,7 @@
     <Component class="javax.swing.JButton" name="RetirarBtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="1"/>
+          <Font name="HP Simplified" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Retirar"/>
       </Properties>
@@ -163,7 +172,7 @@
     <Component class="javax.swing.JButton" name="TransferirBtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="1"/>
+          <Font name="HP Simplified" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Transferir"/>
       </Properties>
@@ -174,7 +183,7 @@
     <Component class="javax.swing.JButton" name="ConsultCuentasBtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="1"/>
+          <Font name="HP Simplified" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Consulta cuentas"/>
       </Properties>
@@ -185,7 +194,7 @@
     <Component class="javax.swing.JButton" name="BuscarBtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="1"/>
+          <Font name="HP Simplified" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Buscar por id"/>
       </Properties>
@@ -196,7 +205,7 @@
     <Component class="javax.swing.JButton" name="HdesactivadasBtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="1"/>
+          <Font name="HP Simplified" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="H. desactivadas"/>
       </Properties>
@@ -207,7 +216,7 @@
     <Component class="javax.swing.JButton" name="HActivasBtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="1"/>
+          <Font name="HP Simplified" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Historial activas"/>
       </Properties>
